lee and johnson added

--- a/panand.bib
+++ b/panand.bib
@@ -1,3 +1,41 @@
+@article{baughman2019strong,
+  title={Strong Patterns of Intraspecific Variation and Local Adaptation in Great Basin Plants Revealed Through a Review of 75 Years of Experiments},
+  author={Baughman, Owen W and Agneray, Alison C and Forister, Matthew L and Kilkenny, Francis F and Espeland, Erin K and Fiegener, Rob and Horning, Matthew E and Johnson, Richard C and Kaye, Thomas N and Ott, Jeffrey E and others},
+  journal={BioRxiv},
+  pages={506089},
+  year={2019},
+  publisher={Cold Spring Harbor Laboratory}
+  annote={}  
+}
+
+@article{galliart2019local,
+  title={Local adaptation, genetic divergence, and experimental selection in a foundation grass across the US Great Plains’ climate gradient},
+  author={Galliart, Matthew and Bello, Nora and Knapp, Mary and Poland, Jesse and St Amand, Paul and Baer, Sara and Maricle, Brian and Smith, Adam B and Johnson, Loretta},
+  journal={Global change biology},
+  volume={25},
+  number={3},
+  pages={850--868},
+  year={2019},
+  publisher={Wiley Online Library}
+  annote={Loretta Johnson has a beautiful set of common gardens of A. gerardii. Worth thinking about how to leverage those resources/data, as likely not available for any other species we're working on except maize and sorghum.}
+}
+
+@article {lee2019population,
+	author = {Lee, Kristin M and Coop, Graham},
+	title = {Population genomics perspectives on convergent adaptation},
+	elocation-id = {503284},
+	year = {2018},
+	doi = {10.1101/503284},
+	publisher = {Cold Spring Harbor Laboratory},
+	abstract = {Convergent adaptation is the independent evolution of similar traits conferring a fitness advantage in two or more lineages. Cases of convergent adaptation inform our ideas about the ecological and molecular basis of adaptation. In judging the degree to which putative cases of convergent adaptation provide independent replication of the process of adaptation, it is necessary to establish the degree to which the evolutionary change is unexpected under null models and to show that selection has repeatedly, independently driven these changes. Here, we discuss the issues that arise from these questions particularly for closely-related populations, where gene flow and standing variation add additional layers of complexity. We outline a conceptual framework to guide intuition as to the extent to which evolutionary change represents the independent gain of information due to selection and show that this is a measure of how surprised we should be by convergence. Additionally, we summarize the ways population and quantitative genetics and genomics may help us address questions related to convergent adaptation, as well as open new questions and avenues of research.},
+	URL = {https://www.biorxiv.org/content/early/2018/12/20/503284},
+	eprint = {https://www.biorxiv.org/content/early/2018/12/20/503284.full.pdf},
+	journal = {bioRxiv}
+        annote = {A nice perspective suggesting we quantify convergence as the percent of shared death. A useful and fairly generic way of approaching the problem of how to decide what we mean by convergence and when it excites us.}
+
+}
+
+
 @article{lee2017distinguishing,
   title={Distinguishing among modes of convergent adaptation using population genomic data},
   author={Lee, Kristin M and Coop, Graham},
