deleted placeholder annote for lee2017

--- a/panand.bib
+++ b/panand.bib
@@ -56,5 +56,5 @@
   number={4},
   pages={1591--1619},
   year={2017},
-  annote={Called, "a must-read" by JRI. Obviously more notes will be added.}
+  annote={}
 }
