--- a/panand.bib
+++ b/panand.bib
@@ -1,3 +1,20 @@
+
+@article{yan2019parallels,
+author = {Yan, Lang and Kenchanmane Raju, Sunil Kumar and Lai, Xianjun and Zhang, Yang and Dai, Xiuru and Rodriguez, Oscar and Mahboub, Samira and Roston, Rebecca L. and Schnable, James C.},
+title = {Parallels between natural selection in the cold-adapted crop-wild relative Tripsacum dactyloides and artificial selection in temperate adapted maize},
+journal = {The Plant Journal},
+volume = {0},
+number = {ja},
+pages = {},
+keywords = {Parallel evolution, adaptation, cold tolerance, maize, crop wild relatives},
+doi = {10.1111/tpj.14376},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/tpj.14376},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/tpj.14376},
+abstract = { Artificial selection has produced varieties of domesticated maize which thrive in temperate climates around the world. However, the direct progenitor of maize, teosinte, is indigenous only to a relatively small range of tropical and sub-tropical latitudes and grows poorly or not at all outside of this region. Tripsacum, a sister genus to maize and teosinte, is naturally endemic to the majority of areas in the western hemisphere where maize is cultivated. A full-length reference transcriptome for Tripsacum dactyloides generated using long-read Iso-Seq data was used to characterize independent adaptation to temperate climates in this clade. Genes related to phospholipid biosynthesis, a critical component of cold acclimation in other cold adapted plant lineages, were enriched among those genes experiencing more rapid rates of protein sequence evolution in T. dactyloides. In contrast with previous studies of parallel selection, we find that there is a significant overlap between the genes which were targets of artificial selection during the adaptation of maize to temperate climates and those which were targets of natural selection in temperate adapted T. dactyloides. Genes related to growth, development, response to stimulus, signaling, and organelles were enriched in the set of genes identified as both targets of natural and artificial selection. This article is protected by copyright. All rights reserved.},
+annote={}
+}
+
+
 @article{baughman2019strong,
   title={Strong Patterns of Intraspecific Variation and Local Adaptation in Great Basin Plants Revealed Through a Review of 75 Years of Experiments},
   author={Baughman, Owen W and Agneray, Alison C and Forister, Matthew L and Kilkenny, Francis F and Espeland, Erin K and Fiegener, Rob and Horning, Matthew E and Johnson, Richard C and Kaye, Thomas N and Ott, Jeffrey E and others},
