added sorghum reference genome paper

--- a/panand.bib
+++ b/panand.bib
@@ -1,3 +1,15 @@
+@article{paterson2009sorghum,
+  title={The Sorghum bicolor genome and the diversification of grasses},
+  author={Paterson, Andrew H and Bowers, John E and Bruggmann, Remy and Dubchak, Inna and Grimwood, Jane and Gundlach, Heidrun and Haberer, Georg and Hellsten, Uffe and Mitros, Therese and Poliakov, Alexander and others},
+  journal={Nature},
+  volume={457},
+  number={7229},
+  pages={551},
+  year={2009},
+  publisher={Nature Publishing Group},
+  annote={The Sorghum reference genome paper}
+}
+
 @article {mckain2018ancestry,
 	author = {McKain, Michael R. and Estep, Matt C. and Pasquet, R{\'e}my and Layton, Daniel J. and Vela D{\'\i}az, Dilys M. and Zhong, Jinshun and Hodge, John G. and Malcomber, Simon T. and Chipabika, Gilson and Pallangyo, Beatrice and Kellogg, Elizabeth A.},
 	title = {Ancestry of the two subgenomes of maize},
@@ -9,7 +21,7 @@
 	URL = {https://www.biorxiv.org/content/early/2018/06/20/352351},
 	eprint = {https://www.biorxiv.org/content/early/2018/06/20/352351.full.pdf},
 	journal = {bioRxiv},
-        annote = {Phylogeny of andropogoneae and putative ancestors of Zea}
+    annote = {Phylogeny of andropogoneae and putative ancestors of Zea}
 }
 
 @article{yan2019parallels,
