added Tenaillon 2012 adaptive convergence experiment in e coli

--- a/panand.bib
+++ b/panand.bib
@@ -1,3 +1,16 @@
+@article{tenaillon2012molecular,
+  title={The molecular diversity of adaptive convergence},
+  author={Tenaillon, Olivier and Rodr{\'\i}guez-Verdugo, Alejandra and Gaut, Rebecca L and McDonald, Pamela and Bennett, Albert F and Long, Anthony D and Gaut, Brandon S},
+  journal={Science},
+  volume={335},
+  number={6067},
+  pages={457--461},
+  year={2012},
+  publisher={American Association for the Advancement of Science},
+  annote={Cool LTEE E. coli paper studying convergent adaptation to constant high temp environment. Studied 115 independent lines for 2000 generations. They find shared point mutations are relatively rare, with a max of 18 or so lines having the same point mutation in RNApol and in rho genes. Data suggests the experiment wasfar from saturation of beneficial point mutations, but quite near saturation for functional groups.}
+}
+
+
 @article{paterson2009sorghum,
   title={The Sorghum bicolor genome and the diversification of grasses},
   author={Paterson, Andrew H and Bowers, John E and Bruggmann, Remy and Dubchak, Inna and Grimwood, Jane and Gundlach, Heidrun and Haberer, Georg and Hellsten, Uffe and Mitros, Therese and Poliakov, Alexander and others},
