added yeam c statistics paper

--- a/panand.bib
+++ b/panand.bib
@@ -126,6 +126,20 @@ annote={}
   annote={}
 }
 
+@article{yeaman2018quantifying,
+  title={Quantifying how constraints limit the diversity of viable routes to adaptation},
+  author={Yeaman, Sam and Gerstein, Aleeza C and Hodgins, Kathryn A and Whitlock, Michael C},
+  journal={PLoS genetics},
+  volume={14},
+  number={10},
+  pages={e1007717},
+  year={2018},
+  publisher={Public Library of Science},
+  annote={They develop statistics to quantify the constraints underlying an adaptive response to assess how much repeated evolution ought to occur.}
+
+}
+
+
 @article{yeaman2016convergent,
   title={Convergent local adaptation to climate in distantly related conifers},
   author={Yeaman, Sam and Hodgins, Kathryn A and Lotterhos, Katie E and Suren, Haktan and Nadeau, Simon and Degner, Jon C and Nurkowski, Kristin A and Smets, Pia and Wang, Tongli and Gray, Laura K and others},
